# arcade-statusline

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh  statusline-pikmin.sh  statusline.ps1  statusline.sh
demo/: demo-states.sh  demo.sh
src/: helpers.rs  main.rs  models.rs  settings.rs  state.rs
src/themes/: mod.rs  pacman.rs  pikmin.rs
