[package]
name = "arcade-statusline"
version = "0.1.0"
edition = "2024"
description = "Arcade-style statusline for Claude Code"
repository = "https://github.com/sorosora/arcade-statusline"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
opt-level = "s"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
