[package]
name = "arcade-statusline"
version = "2.0.1"
edition = "2024"
description = "Arcade-style statusline for Claude Code"
repository = "https://github.com/sorosora/arcade-statusline"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
